Fix search button on mobile resolution

--- a/public/css/layout-basic.css
+++ b/public/css/layout-basic.css
@@ -73,12 +73,12 @@ nav:after {
 .btn-custom-search {
     color: #7b7c7c;
     background: #fefefe;
+    padding-top: 12px;
     padding-right: 8px;
     border: 1px solid #cdd3d9;
     border-left: none;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
-    line-height: 38px;
 }
 
 .btn-custom-search:hover,
